@@ -7,7 +7,6 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -25,7 +24,7 @@ public class ProgramTO {
                 programDO.getName(),
                 programDO.getSemesterDOs().stream()
                         .map(SemesterTO::fromDO)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
